<?xml version="1.0"?>
<package format="2">
  <name>ceasar_config</name>
  <version>0.1.0</version>
  <description>ceasar Champ Config Package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>i2cpwm_board</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>

  <exec_depend>champ_base</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>i2c_imu</exec_depend>
  <exec_depend>i2cpwm_board</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  
</package>